--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,22 +5,6 @@ layout: default
 <a class="btn" href= "{{ site.url }}/" >
   Home
 </a>
-{% if page.image.feature %}
-<div class="post-image-feature">
-  <img width="50%" height="50%" class="feature-image" src=
-  {% if page.image.feature contains 'https' or page.image.feature contains 'http' %}
-  "{{ page.image.feature }}"
-  {% else %}
-  "{{ site.url }}/img/{{ page.image.feature }}"
-  {% endif %}
-  alt="{{ page.title }} feature image">
-
-  {% if page.image.credit %}
-  <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
-  {% endif %}
-</div><!-- /.image-wrap -->
-{% endif %}
-
 
 <div id="post">
   <header class="post-header">
@@ -34,6 +18,22 @@ layout: default
     </span>
 
   </header>
+
+  {% if page.image.feature %}
+  <div class="post-image-feature" aling="center">
+    <img width="45%" height="45%" class="feature-image" src=
+            {% if page.image.feature contains 'https' or page.image.feature contains 'http' %}
+    "{{ page.image.feature }}"
+    {% else %}
+    "{{ site.url }}/img/{{ page.image.feature }}"
+    {% endif %}
+    alt="{{ page.title }} feature image">
+
+    {% if page.image.credit %}
+    <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
+    {% endif %}
+  </div><!-- /.image-wrap -->
+  {% endif %}
 
   <article class="post-content">
     {{ content }}
